5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_1332.log
== TEST (2019-03-14 17:47:09) 
-- CODE:
aresta =5
area = print(3/2*(3*a**2))
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(3/2*(3*a**2))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:47:24) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:48:44) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(area, 4)
-- OUTPUT:
4.5
None 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:50:43) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(area, 4)
-- EXECUTION TIME:
0.216873
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4.5
None 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:52:27) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round area, 4.5)
-- ERROR:
File "XXXX", line 4
    print(round area, 4.5)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:52:42) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round area 4.5)
-- ERROR:
File "XXXX", line 4
    print(round area 4.5)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:53:20) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round area 4.5)
-- ERROR:
File "XXXX", line 4
    print(round area 4.5)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:53:25) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round area 4.5)
-- EXECUTION TIME:
0.140557
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round area 4.5)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:53:32) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round  4.5)
-- EXECUTION TIME:
0.131645
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round  4.5)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:53:38) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round 4.5)
-- ERROR:
File "XXXX", line 4
    print(round 4.5)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:53:49) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round 4*5)
-- EXECUTION TIME:
0.239357
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round 4*5)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:54:12) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round **4.5)
-- EXECUTION TIME:
0.189964
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 4, in <module>
    print(round **4.5)
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:11:02) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round **4.5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round **4.5)
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:11:03) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round **4.5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round **4.5)
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:31:16) 
-- CODE:
aresta =5
area = print(3/2*(3*1**2))
 
print(round **4.5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round **4.5)
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:32:04) 
-- CODE:
aresta =5
area =(3/2*(3*1**2))
 
print(round **4.5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round **4.5)
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:33:41) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
 (round **4.5)
-- ERROR:
File "XXXX", line 4
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:34:00) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- EXECUTION TIME:
0.211435
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:34:03) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- ERROR:
File "XXXX", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:34:06) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- ERROR:
File "XXXX", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:34:07) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- ERROR:
File "XXXX", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:34:07) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- ERROR:
File "XXXX", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:34:08) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- EXECUTION TIME:
0.221632
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:34:08) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- EXECUTION TIME:
0.303285
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:34:08) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- EXECUTION TIME:
0.101023
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:34:09) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- EXECUTION TIME:
0.172351
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:00:19) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area,4))
-- ERROR:
File "XXXX", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:00:25) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area,4))
-- ERROR:
File "XXXX", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:00:30) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area,4))
-- EXECUTION TIME:
0.194979
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:00:36) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area,4))
-- EXECUTION TIME:
0.137115
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:00:54) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area,**4))
-- ERROR:
File "XXXX", line 4
    print(round(area,**4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:01:02) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- ERROR:
File "XXXX", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:08) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.119076
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:08) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.114255
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:09) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.17993
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:09) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.201743
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:09) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.113868
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:09) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.112784
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:10) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.10282
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:01:10) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- EXECUTION TIME:
0.0894461
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:02:13) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*(area**2)

print(round(area **4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2)*(3**0.5)*(area**2)
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:02:43) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **4))
-- ERROR:
File "XXXX", line 4
    print(round(area **4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:03:12) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(area **,4)
-- ERROR:
File "XXXX", line 4
    print(round(area **,4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:04:16) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

round(area **4
-- ERROR:
File "XXXX", line 4
    round(area **4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:04:23) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

round(area **4)
-- ERROR:
File "XXXX", line 4
    round(area **4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:05:20) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

print(round(**4)
-- ERROR:
File "XXXX", line 4
    print(round(**4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:44:39) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

round(**4)
-- ERROR:
File "XXXX", line 4
    round(**4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:44:39) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)

round(**4)
-- ERROR:
File "XXXX", line 4
    round(**4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:44:53) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
-- ERROR:
File "XXXX", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:46:25) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
prin(round(area,4))
-- ERROR:
File "XXXX", line 3
    prin(round(area,4))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:47:03) 
-- CODE:
aresta =5
area =(3/2*(3**0.5)*(area**2)
print(round(area,4))
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:49:20) 
-- CODE:
aresta =5
area =(3/2)(3**0.5)*(area**2)
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2)(3**0.5)*(area**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:50:22) 
-- CODE:
aresta =5
area =(3/2)(3**0.5)*(area**2)
print(round(area,4))
-- EXECUTION TIME:
0.194091
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    area =(3/2)(3**0.5)*(area**2)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:50:25) 
-- CODE:
aresta =5
area =(3/2)(3**0.5)*(area**2)
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2)(3**0.5)*(area**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:51:44) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*(area**2)
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2)*(3**0.5)*(area**2)
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:53:04) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*(aresta**2)
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 14:53:09) 
-- CODE:
aresta =5
area =(3/2)*(3**0.5)*(aresta**2)
print(round(area,4))
-- EXECUTION TIME:
0.180524
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
